--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ serde = { version = "1.0.197", features = ["derive"] }
 thiserror = "1.0.58"
 candid = "0.10.6"
 log = "0.4.21"
-yral-identity = { git = "https://github.com/go-bazzinga/yral-identity.git", rev = "6719144792d5831a0a3a332a1dc75141076b6c9c" }
+yral-identity = { git = "https://github.com/go-bazzinga/yral-identity.git", rev = "9ad5059314e7e736a36ae473b44d68405c14a229", default-features = false }
