--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 types = { path = "../types", package = "yral-metadata-types" }
-yral-identity.workspace = true
+yral-identity = { workspace = true, features = ["default"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "http2"] }
 thiserror.workspace = true
 ic-agent = "0.34.0"
