--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 ntex = { version = "1.2.1", features = ["tokio"] }
 serde.workspace = true
 types = { path = "../types", package = "yral-metadata-types" }
-gob-cloudflare = { git = "https://github.com/go-bazzinga/gob-cloudflare.git", rev = "59033087bcc2f307f8458da86ee2893209b992ef" }
+gob-cloudflare = { git = "https://github.com/go-bazzinga/gob-cloudflare.git", rev = "59033087bcc2f307f8458da86ee2893209b992ef", default-features = false, features = ["rustls-tls"] }
 config = { version = "0.14.0", features = ["toml"] }
 thiserror.workspace = true
 candid.workspace = true
 log.workspace = true
 env_logger = "0.11.3"
-yral-identity.workspace = true
+yral-identity = { workspace = true, default-features = false }
