--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 types = { path = "../types", package = "yral-metadata-types" }
-yral-identity = { workspace = true, features = ["default"] }
+yral-identity = { workspace = true, default-features = false, features = ["ic-agent"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "http2"] }
 thiserror.workspace = true
-ic-agent = "0.34.0"
+ic-agent = { version = "0.34.0", default-features = false }
 
 [features]
 native-tls = ["reqwest/native-tls"]
