chore: bump deps

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 ntex = { version = "1.2.1", features = ["tokio"] }
+ntex-cors = "1.0.0"
 serde.workspace = true
 types = { path = "../types", package = "yral-metadata-types" }
-gob-cloudflare = { git = "https://github.com/go-bazzinga/gob-cloudflare.git", rev = "59033087bcc2f307f8458da86ee2893209b992ef", default-features = false, features = ["rustls-tls"] }
+gob-cloudflare = { git = "https://github.com/go-bazzinga/gob-cloudflare.git", rev = "c847ba87ecc73a33520b24bd62503420d7e23e3e", default-features = false, features = ["rustls-tls"] }
 config = { version = "0.14.0", features = ["toml"] }
 thiserror.workspace = true
 candid.workspace = true
