--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,17 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master 
+      - master
 
 jobs:
   build:
     uses: ./.github/workflows/build.yml
     with:
       publish-artifact: true
-  
+
   deploy:
     name: Deploy
-    needs: build 
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,9 +26,11 @@ jobs:
       - name: Set secret tokens
         run: |
           flyctl secrets set REDIS_URL=$REDIS_URL --app "yral-metadata" --stage
+          flyctl secrets set OFF_CHAIN_AGENT_TOKEN="$OFF_CHAIN_AGENT_TOKEN" --app "yral-metadata" --stage
         env:
           REDIS_URL: ${{ secrets.AUTH_FLY_IO_UPSTASH_REDIS_DATABASE_CONNECTION_STRING }}
           FLY_API_TOKEN: ${{ secrets.AUTH_METADATA_MICROSERVICE_FLY_IO_GITHUB_ACTION }}
+          OFF_CHAIN_AGENT_TOKEN: ${{ secrets.AUTH_OFF_CHAIN_AGENT_YRAL_METADATA_TOKEN }}
       - name: Deploy a docker container to Fly.io
         run: flyctl deploy --remote-only
         env:
