--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,13 @@ ntex = { version = "1.2.1", features = ["tokio"] }
 ntex-cors = "1.0.0"
 serde.workspace = true
 types = { path = "../types", package = "yral-metadata-types" }
-redis = { version = "0.25.2", features = ["tokio-rustls-comp", "aio", "ahash", "connection-manager", "keep-alive"] }
+redis = { version = "0.25.2", features = [
+    "tokio-rustls-comp",
+    "aio",
+    "ahash",
+    "connection-manager",
+    "keep-alive",
+] }
 config = { version = "0.14.0", features = ["toml"] }
 serde_json = "1.0.115"
 serde_with = "3.7.0"
@@ -20,4 +26,9 @@ log.workspace = true
 env_logger = "0.11.3"
 bb8 = "0.8.2"
 bb8-redis = "0.15.0"
-yral-identity = { workspace = true, default-features = false, features = ["ic-git"] }
+yral-identity = { workspace = true, default-features = false, features = [
+    "ic-git",
+] }
+jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
+futures = "0.3.30"
+once_cell = "1.19.0"
