--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,7 +18,7 @@ redis = { version = "0.25.2", features = [
     "keep-alive",
 ] }
 config = { version = "0.14.0", features = ["toml"] }
-serde_json = "1.0.115"
+serde_json.workspace = true
 serde_with = "3.7.0"
 thiserror.workspace = true
 candid.workspace = true
@@ -29,6 +29,10 @@ bb8-redis = "0.15.0"
 yral-identity = { workspace = true, default-features = false, features = [
     "ic-git",
 ] }
-jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
+jsonwebtoken.workspace = true
 futures = "0.3.30"
 once_cell = "1.19.0"
+tonic = "0.11"
+tonic-web = "0.11"
+prost = "0.12"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
