--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -10,3 +10,14 @@ serde.workspace = true
 candid.workspace = true 
 thiserror.workspace = true
 yral-identity = { workspace = true, default-features = false }
+tonic = "0.11"
+prost = "0.12"
+serde_json.workspace = true
+
+[features]
+client = []
+server = []
+default = ["client", "server"]
+
+[build-dependencies]
+tonic-build = "0.11"
